# concept-resolver

./: .gitignore  Dockerfile  Makefile  README.md  deploy.sh  docker-compose.yml  init.py  prestart.sh  pyproject.toml  requirements.txt
resources/: paper.bib  paper.md
src/: api.py  babel_load.py  babel_search.py  load.py  pubdict_load.py  pubdict_mean.py  pubdict_search.py  search.py
